# libEpsilonDelta

./: .gitignore  CMakeLists.txt  README.txt  SConstruct  SConstruct.new  license.txt  readme.txt  scons_options.py.linux  scons_options.py.win
astro/: ApparentEphemeris.cpp  ApparentEphemeris.hpp  AstroConst.hpp  AstroCoordTransformations.cpp  AstroCoordTransformations.hpp  AstroPhenomena.cpp  AstroPhenomena.hpp  CMakeLists.txt  Constellations.cpp  Constellations.hpp  CoordinateReduction.cpp  CoordinateReduction.hpp  Ecliptical.hpp  EquationOfTime.cpp  EquationOfTime.hpp  Equatorial.cpp  Equatorial.hpp  Galactic.hpp  GeodeticDatum.cpp  GeodeticDatum.hpp  GeodeticEllipsoid.cpp  GeodeticEllipsoid.hpp  GeodeticFPTemplates.cpp  GeodeticFPTemplates.hpp  GeodeticLocation.cpp  GeodeticLocation.hpp  Horizontal.cpp  Horizontal.hpp  JPLEphemeris.cpp  JPLEphemeris.hpp  LunarVisibility.cpp  LunarVisibility.hpp  MoonPhases.cpp  MoonPhases.hpp  Nutation.cpp  Nutation.hpp  Obliquity.cpp  Obliquity.hpp  Precession.cpp  Precession.hpp  (+8 more)
astro/test/: CMakeLists.txt  SConscript  TestAstroLib.cpp  testpo.200  (+3 more)
calendar/: ArmenianCalendar.cpp  ArmenianCalendar.hpp  ArmenianDate.cpp  ArmenianDate.hpp  ArmenianWeek.cpp  ArmenianWeek.hpp  BadiCalendar.cpp  BadiCalendar.hpp  BadiDate.cpp  BadiDate.hpp  BahaiCalendar.cpp  BahaiCalendar.hpp  BahaiDate.cpp  BahaiDate.hpp  BahaiWeek.cpp  BahaiWeek.hpp  CMakeLists.txt  CalendarLibText.cpp  CalendarLibText.hpp  ChineseCalendar.cpp  ChineseCalendar.hpp  ChineseDate.cpp  ChineseDate.hpp  CopticCalendar.cpp  CopticCalendar.hpp  CopticDate.cpp  CopticDate.hpp  CopticWeek.cpp  CopticWeek.hpp  EgyptianCalendar.cpp  EgyptianCalendar.hpp  EgyptianDate.cpp  EgyptianDate.hpp  EthiopianCalendar.cpp  EthiopianCalendar.hpp  EthiopianDate.cpp  EthiopianDate.hpp  EthiopianWeek.cpp  EthiopianWeek.hpp  FrenchRevolutionaryCalendar.cpp  (+68 more)
cgi/: CGIInput.cpp  CGIInput.hpp  CGIOutput.cpp  CGIOutput.hpp  CGIRawInput.cpp  CGIRawInput.hpp  CMakeLists.txt  SConscript
file/: BasicReader.hpp  BasicWriter.hpp  CMakeLists.txt  ConfigFile.cpp  ConfigFile.hpp  DataBuffer.cpp  DataBuffer.hpp  DirUtil.cpp  DirUtil.hpp  File.cpp  File.hpp  FileException.cpp  FileException.hpp  FileName.cpp  FileName.hpp  FileReader.cpp  FileReader.hpp  FileUtil.cpp  FileUtil.hpp  FileWriter.cpp  FileWriter.hpp  Loader.cpp  Loader.hpp  NestedReader.cpp  NestedReader.hpp  RandomAccess.hpp  Reader.cpp  Reader.hpp  SConscript  Saver.cpp  Saver.hpp  Writer.cpp  Writer.hpp
graphics2d/: CMakeLists.txt  Circle.cpp  Circle.hpp  Color.cpp  Color.hpp  Dot2.cpp  Dot2.hpp  DrawingSurface.hpp  Ellipse.cpp  Ellipse.hpp  FTException.cpp  FTException.hpp  FontManager.cpp  FontManager.hpp  Glyph.cpp  Glyph.hpp  Graphics2D.hpp  Image.hpp  Line2.cpp  Line2.hpp  LineSegment2.cpp  LineSegment2.hpp  Pixel.cpp  Pixel.hpp  Point2.cpp  Point2.hpp  Rectangle.cpp  Rectangle.hpp  Region.hpp  SConscript  SDLGraphics2D.cpp  SDLImage.cpp  SDLSurface.cpp  SDLSurface.hpp  SimpleSpriteSystem.cpp  SimpleSpriteSystem.hpp  Sprite.cpp  Sprite.hpp  SpriteSystem.hpp  Surface.hpp  (+2 more)
input/: CMakeLists.txt  CWiiDWiimote.cpp  DeviceOwners.cpp  DeviceOwners.hpp  Gamepad.cpp  Gamepad.hpp  Input.cpp  Input.hpp  InputButtonMap.cpp  InputButtonMap.hpp  InputDevice.cpp  InputDevice.hpp  InputDeviceMap.cpp  InputDeviceMap.hpp  InputEvent.hpp  InputEventMap.cpp  InputEventMap.hpp  Joystick.cpp  Joystick.hpp  KeyPressEvent.hpp  Keyboard.cpp  Keyboard.hpp  MappedInput.cpp  MappedInput.hpp  Mouse.cpp  Mouse.hpp  MouseClickEvent.hpp  MouseState.cpp  MouseState.hpp  RegionMap.cpp  RegionMap.hpp  SDLInput.cpp  WiiYourselfWiimote.cpp  Wiimote.cpp  Wiimote.hpp  WiimoteState.cpp  WiimoteState.hpp
math/: Angle.cpp  Angle.hpp  AngleDMS.cpp  AngleDMS.hpp  AngleHMS.cpp  AngleHMS.hpp  AxisAngle.hpp  CMakeLists.txt  ConvergenceException.cpp  ConvergenceException.hpp  DivMod.cpp  DivMod.hpp  EulerAngles.cpp  EulerAngles.hpp  Factorial.cpp  Factorial.hpp  FixedPoint.cpp  FixedPoint.hpp  Gamma.cpp  Gamma.hpp  Matrix2.cpp  Matrix2.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  NullVectorException.cpp  NullVectorException.hpp  ODE.cpp  ODE.hpp  Permutation.cpp  Permutation.hpp  Point2.cpp  Point2.hpp  Point3.cpp  Point3.hpp  Polar.cpp  Polar.hpp  Polynomial.cpp  Polynomial.hpp  (+29 more)
mmbase/: CMakeLists.txt  SConscript  SDL.cpp  SDL.hpp  SDLClock.cpp  SDLClock.hpp  SDLException.cpp  SDLException.hpp
sql/: CMakeLists.txt  MySQLDatabase.cpp  MySQLDatabase.hpp  MySQLException.cpp  MySQLException.hpp  MySQLLibrary.cpp  MySQLLibrary.hpp  MySQLResult.cpp  MySQLResult.hpp  PostgreSQLDatabase.cpp  PostgreSQLDatabase.hpp  PostgreSQLException.cpp  PostgreSQLException.hpp  PostgreSQLResult.cpp  PostgreSQLResult.hpp  SConscript  SQLDatabase.hpp  SQLException.hpp  SQLResult.cpp  SQLResult.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp  SQLiteException.cpp  SQLiteException.hpp  SQLiteResult.cpp  SQLiteResult.hpp
time/: CMakeLists.txt  DMYDate.hpp  DMYWDate.hpp  Date.hpp  DateDMY.hpp  DateDMYW.hpp  DateFixupMethod.hpp  DateJD.cpp  DateJD.hpp  DateTime.cpp  DateTime.hpp  Epoch.cpp  Epoch.hpp  GregorianCalendar.cpp  GregorianCalendar.hpp  GregorianDate.cpp  GregorianDate.hpp  JDDate.cpp  JDDate.hpp  ModifiedJulianDay.cpp  ModifiedJulianDay.hpp  SConscript  StdClock.cpp  StdClock.hpp  StdTime.cpp  StdTime.hpp  Time.cpp  Time.hpp  TimeIncrement.cpp  TimeIncrement.hpp  TimeLibText.cpp  TimeLibText.hpp  TimeSource.hpp  TimeStandards.cpp  TimeStandards.hpp  Timer.cpp  Timer.hpp  WesternWeek.cpp  WesternWeek.hpp
util/: Algorithms.cpp  Algorithms.hpp  Array.cpp  Array.hpp  Assert.cpp  Assert.hpp  CMakeLists.txt  CSV.cpp  CSV.hpp  CharType.cpp  CharType.hpp  CodePointData.hpp  Exception.cpp  Exception.hpp  FixEndian.cpp  FixEndian.hpp  IndexedVector.cpp  IndexedVector.hpp  JSON.cpp  JSON.hpp  JSONException.cpp  JSONException.hpp  Logger.cpp  Logger.hpp  Platform.hpp  SConscript  Singleton.hpp  SmartPtr.cpp  SmartPtr.hpp  StdIO.hpp  StdInt.hpp  StdLib.hpp  StringUtil.cpp  StringUtil.hpp  TestCheck.cpp  TestCheck.hpp  UnicodeException.cpp  UnicodeException.hpp  UnicodeUtil.cpp  UnicodeUtil.hpp  (+2 more)
(+59 files in other folders)
